tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__StandardNuclearF-AAAAAAAAAAAAAAAAAAAHaA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1896,
  "prerequisites": [
    1667,
    191
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These are...not worth it. Go do something else with your enriched naquadah, like putting it in a naq gen if you want power. They work §oexactly§r the same as uranium other than materials cost/output.\n\n[note]PS: You can get Nq+ from both centrifuging Nq dust or processing the ore.[/note]\n\n[note]And why are they Naquadah rods when they're made of Enriched Naquadah?[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Standard Nuclear Fuel II: Naquadah",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1667,
    191
  ],
  "rewards": [],
  "tasks": []
}
