tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__ThisisyourKrypto-pLCgOVmqTUCudSXZusnceg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6461061555823434874,
  "prerequisites": [
    11861152961868178529,
    8644463293575708333,
    11422892994693069592
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Here's the special Titanium I promised you. GT++ materials enter the fray here, both with this and the Titansteel you need to add to that to make what comes next!\n\nThat step only comes after fusing Niobium and Zinc into Krypton Plasma. You get a rarer noble gas here than before, the next one will be Xenon. This recipe matches in speed with the next one, which uses Krypton to make Astral Titanium Plasma, by adding in the final plasma of the previous chain, Force Plasma! That's right, each chain needs everything from before to continue.\n\nOnce you have Astral Titanium Plasma, you can move on to the final mk2 step.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "This is your Kryptonite!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11861152961868178529,
    8644463293575708333,
    11422892994693069592
  ],
  "rewards": [],
  "tasks": []
}
